Fix ticket #123: WARNING: Brutal Commit. Read the whole commit message
Replaced all the standard URLs by reversal ones (RURLs from now on). Modified all the templates
to point to the RURLs instead of static ones. Fixed all the templates to have 4 spaces tabs.
Removed swingtime code since it was useless. Fixed third party apps to work
with the new RURLs in Django 1.4. Removed templates nor used in production.
Added permalinks to all data models. Added new sections in space index.

--- a/src/e_cidadania/apps/debate/templates/debate/debate_add.html
+++ b/src/e_cidadania/apps/debate/templates/debate/debate_add.html
@@ -2,6 +2,8 @@
 {% load i18n %}
 
 {% block title %}{% trans "Create new debate" %}{% endblock %}
+{% block logo %}<img src="{{ MEDIA_URL }}/{{ get_place.logo }}">{% endblock %}
+{% block banner %}<img src="{{ MEDIA_URL }}/{{ get_place.banner }}">{% endblock %}
 
 {% block content %}
 
@@ -91,7 +93,7 @@
                 <hr />
 
                 <input class="btn primary small" type="submit" value="{% trans 'Save' %}" />
-                <a href="../../" class="btn danger small">{% trans "Cancel" %}</a>
+                <a href="{{ get_place.get_absolute_url }}" class="btn danger small">{% trans "Cancel" %}</a>
 
             </form>
                 
@@ -107,8 +109,7 @@
             <div id="widget">
              <h2>{% trans "How to add new debates" %}</h2><br/>
                 <ul class="instructions">
-                    <li><strong>{% trans "Modules" %}</strong>: {% trans "Select the
-                            modules you will use in your space. This can be edited afterwards." %}</li>
+                    <li><strong>{% trans "Modules" %}</strong>: {% trans "Select the modules you will use in your space. This can be edited afterwards." %}</li>
                 </ul>
             </div>
         </div>
