--- a/src/e_cidadania/apps/userprofile/templates/userprofile/avatar/search.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/avatar/search.html
@@ -40,7 +40,7 @@
 	</fieldset>
 	</form>
 
-	<form class="hide" id="avatar" action="{% url profile_edit_avatar %}" method="post" accept-charset="utf-8">
+	<form class="hide" id="avatar" action="{% url 'profile_edit_avatar' %}" method="post" accept-charset="utf-8">
 		<input type="hidden" name="url" value="" />
 	</form>
 {% endblock %}
