--- a/src/e_cidadania/apps/cal/templates/cal/calendar.html
+++ b/src/e_cidadania/apps/cal/templates/cal/calendar.html
@@ -7,32 +7,29 @@
 
 {% block content %}
 
-  {% block centercol %}
-    <div class="grid_11">
+    {% block centercol %}
+        <div class="grid_11">
     
-      <div id="contenttitles">
-        {% trans "Calendar" %}
-      </div>
+            <div id="contenttitles">
+                {% trans "Calendar" %}
+            </div>
 
-      {{ calendar }}
+            {{ calendar }}
       
-      <hr />
-      <p class="buttons">
-        <a href="../{{ prevmonth }}/" class="pagebutton">{% trans 'Previous month' %}</a>
-        <a href="../{{ nextmonth }}/" class="pagebutton">{% trans 'Next month' %}</a>
-        <a href="../../" class="pagebutton">{% trans "Go back" %}</a>
-      </p>
+            <hr />
+            <a href="../{{ prevmonth }}/" class="btn small">{% trans 'Previous month' %}</a>
+            <a href="../{{ nextmonth }}/" class="btn small">{% trans 'Next month' %}</a>
+            <a href="{{ get_place.get_absolute_url }}" class="btn small">{% trans "Go back" %}</a>
         
-    </div>
-  {% endblock %}
+        </div>
+    {% endblock %}
 
-
-  {% block rightcol %}
-    <div class="grid_5">
-      <div id="widget">
-        <p>Random trext</p>
-      </div>
-    </div>
-  {% endblock %}
+    {% block rightcol %}
+        <div class="grid_5">
+            <div id="widget">
+                <p>Random trext</p>
+            </div>
+        </div>
+    {% endblock %}
 
 {% endblock %}
