--- a/src/e_cidadania/apps/cal/templates/cal/error.html
+++ b/src/e_cidadania/apps/cal/templates/cal/error.html
@@ -7,7 +7,7 @@
 	<div id="grid_16">
 		{% trans "You entered and incorrect month or year. Please correct it." %}<br/><br/><br/>
 		<div>
-		    {% trans "You can go" %} <a href="/"><u>{% trans "back to home" %}</u></a> {% trans "or" %} <a href="/accounts/"><u>{% trans "back to your profile" %}</u></a>
+		    {% trans "You can go" %} <a href="{{ get_place.get_absolute_url }}"><u>{% trans "back to home" %}</u></a> {% trans "or" %} <a href="{% url 'profile_overview' %}"><u>{% trans "back to your profile" %}</u></a>
 	  </div>
 	</div>
 {% endblock %}
