--- a/src/e_cidadania/apps/grappellifit/templates/rosetta/base.html
+++ b/src/e_cidadania/apps/grappellifit/templates/rosetta/base.html
@@ -29,11 +29,11 @@
 {% endblock %}
 
 {% block breadcrumbs %}
-<div id="breadcrumbs"><a href="{% url admin:index %}">{% trans 'Home' %}</a> &rsaquo; Rosetta</div>
+<div id="breadcrumbs"><a href="{% url 'admin:index' %}">{% trans 'Home' %}</a> &rsaquo; Rosetta</div>
 {% endblock %}
 
 {% block content_title %}
-<h1 id="site-name"><a href="{% url rosetta-pick-file %}">Rosetta</a> {% block content_subtitle %}{% endblock %}</h1>
+<h1 id="site-name"><a href="{% url 'rosetta-pick-file' %}">Rosetta</a> {% block content_subtitle %}{% endblock %}</h1>
 {% endblock %}
 
 
