--- a/src/e_cidadania/apps/grappellifit/templates/rosetta/languages.html
+++ b/src/e_cidadania/apps/grappellifit/templates/rosetta/languages.html
@@ -5,7 +5,7 @@
 
 {% block content_subtitle %}: {% trans "Language selection" %}{% endblock %}
 
-{% block breadcumbs %}<a href="{% url rosetta-pick-file %}">{% trans "Home" %}</a> &rsaquo; {% trans "Language selection" %}{% endblock %}
+{% block breadcumbs %}<a href="{% url 'rosetta-pick-file' %}">{% trans "Home" %}</a> &rsaquo; {% trans "Language selection" %}{% endblock %}
 
 {% block bodyclass %}filebrowser{% endblock %}
 {% block content-class %}change-list content-flexible{% endblock %}
@@ -70,7 +70,7 @@
                 <tbody>
                     {% for app,path,po in pos %}
                     <tr class="{% cycle row1,row2 %}">
-                        <td><a href="{% url rosetta-language-selection lid,forloop.counter0 %}{% if do_django %}?django{% endif %}{% if do_rosetta %}?rosetta{% endif %}">{{ app|title }}</a></td>
+                        <td><a href="{% url 'rosetta-language-selection' lid,forloop.counter0 %}{% if do_django %}?django{% endif %}{% if do_rosetta %}?rosetta{% endif %}">{{ app|title }}</a></td>
                         <td class="ch-progress r">{{po.percent_translated|floatformat:2}}%</td>
                         {% with po.untranslated_entries|length as len_untranslated_entries %}
                         <td class="ch-messages r">{{po.translated_entries|length|add:len_untranslated_entries}}</td>
