--- a/src/e_cidadania/apps/news/templates/news/post_add.html
+++ b/src/e_cidadania/apps/news/templates/news/post_add.html
@@ -71,8 +71,8 @@
                 {{ form.space.as_hidden }}
 
                 <hr />
-                <a href="/" class="btn danger small">&laquo; {% trans "Go back" %}</a>
-                <input class="btn small primary " type="submit" value="{% trans 'Publish' %}" />
+                <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Go back" %}</a>
+                <input class="btn small primary" type="submit" value="{% trans 'Publish' %}" />
         
             </form>
         </div>
