--- a/src/e_cidadania/apps/proposals/templates/proposals/proposal_add.html
+++ b/src/e_cidadania/apps/proposals/templates/proposals/proposal_add.html
@@ -70,7 +70,7 @@
                 {{ form.support_votes.as_hidden }}
 
                 <hr />
-                <a href="../../" class="btn danger small">&laquo; {% trans "Go back" %}</a>
+                <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Go back" %}</a>
                 <input class="btn small primary " type="submit" value="{% trans 'Publish' %}" />
             </form>
         </div>
