--- a/src/e_cidadania/apps/rosetta/templates/rosetta/languages.html
+++ b/src/e_cidadania/apps/rosetta/templates/rosetta/languages.html
@@ -37,7 +37,7 @@
                 <tbody>
                     {% for app,path,po in pos %}
                     <tr class="{% cycle row1,row2 %}">
-                        <td><a href="{% url rosetta-language-selection lid,forloop.counter0 %}{% if do_django %}?django{% endif %}{% if do_rosetta %}?rosetta{% endif %}">{{ app|title }}</a></td>
+                        <td><a href="{% url 'rosetta-language-selection' lid,forloop.counter0 %}{% if do_django %}?django{% endif %}{% if do_rosetta %}?rosetta{% endif %}">{{ app|title }}</a></td>
                         <td class="ch-progress r">{{po.percent_translated|floatformat:2}}%</td>
                         <td class="ch-messages r">{{po.translated_entries|add:po.untranslated_entries|length}}</td>
                         <td class="ch-translated r">{{po.translated_entries|length}}</td>
