--- a/src/e_cidadania/apps/spaces/templates/spaces/meeting_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/meeting_add.html
@@ -79,7 +79,7 @@
                 {{ form.meeting_author.as_hidden }}
 
                 <hr />
-                <a href="../../" class="btn danger small">&laquo; {% trans "Cancel" %}</a>
+                <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Cancel" %}</a>
                 <input class="btn small primary " type="submit" value="{% trans 'Create' %}" />
 
             </form>
