--- a/src/e_cidadania/apps/spaces/templates/spaces/meeting_list.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/meeting_list.html
@@ -7,40 +7,39 @@
 
 {% block content %}
 
-  {% block centercol %}
-    <div class="grid_16">
+    {% block centercol %}
+        <div class="grid_16">
     
-      <div id="contenttitles">
-        {% trans "Meeting list" %}
-      </div>
+            <div id="contenttitles">
+                {% trans "Meeting list" %}
+            </div>
       
-      {% for meeting in meeting_list %}
-        <p><a href="{{ meeting.id }}/">{{ meeting.title }}</a></p>
-        <p>{% trans "Published" %} {{ meeting.meeting_date }}</p>
-      {% empty %}
-        <p>{% trans "There are no meetings in this space." %}</p>
-      {% endfor %}
-      <hr />
-      <p>
-        <a href="../" class="pagebutton">{% trans "Go back" %}</a>
-      </p>
-    </div>
+            {% for meeting in meeting_list %}
+                <p><a href="{{ meeting.get_absolute_url }}">{{ meeting.title }}</a></p>
+                <p>{% trans "Published" %} {{ meeting.meeting_date }}</p>
+            {% empty %}
+                <p>{% trans "There are no meetings in this space." %}</p>
+            {% endfor %}
+      
+            <hr />
+            <a href="{{ get_place.get_absolute_url }}" class="btn small">&laquo; {% trans "Go back" %}</a>
+        </div>
     
-    {% if is_paginated %}
-    <div class="pagination">
-      <span class="page-links">
-      {% if page_obj.has_previous %}
-        <a href="/spaces/?page={{ page_obj.previous_page_number }}">previous</a>
-      {% endif %}
-      <span class="page-current">
-        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
-      </span>
-      {% if page_obj.has_next %}
-        <a href="/spaces/?page={{ page_obj.next_page_number }}">next</a>
-      {% endif %}
-      </span>
-    </div>
-    {% endif %}
-  {% endblock %}
+        {% if is_paginated %}
+            <div class="pagination">
+                <span class="page-links">
+                    {% if page_obj.has_previous %}
+                        <a href="{% url 'list-meetings' get_place.url %}?page={{ page_obj.previous_page_number }}">&laquo; {% trans "previous" %} | </a>
+                    {% endif %}
+                    <span class="page-current">
+                        {{ page_obj.number }} {% trans "of" %} {{ page_obj.paginator.num_pages }}
+                    </span>
+                    {% if page_obj.has_next %}
+                        <a href="/spaces/?page={{ page_obj.next_page_number }}"> | {% trans "next" %} &raquo;</a>
+                    {% endif %}
+                </span>
+            </div>
+        {% endif %}
+    {% endblock %}
 
 {% endblock %}
