--- a/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
+++ b/src/e_cidadania/apps/spaces/templates/spaces/space_add.html
@@ -6,106 +6,155 @@
 
 {% block content %}
 
-  {% block centercol %}
-    <div class="grid_11">
+    {% block centercol %}
+        <div class="grid_11">
     
-      <div id="contenttitles">
-        {% trans "Create a new space" %}
-      </div>
+        <div id="contenttitles">
+            {% trans "Create a new space" %}
+        </div>
       
-      <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
-        {{ form.non_field_errors }}
-        <div class="fieldWrapper">
-          {{ form.name.errors }}
-          <label for="id_name">{% trans "Space name" %}:</label>
-          <p>{{ form.name }}</p>
-          <p id="form_help_text">{{ form.name.help_text }}</p>
-        </div>
-        <div class="fieldWrapper">
-          {{ form.name.errors }}
-          <label for="id_name">{% trans "Space URL" %}:</label>
-          <p>{{ form.url }}</p>
-          <p id="form_help_text">{{ form.url.help_text }}</p>
-        </div>
-        <div class="fieldWrapper">
-          <label for="id_description">{% trans "Description" %}:</label>
-          {{ form.description }}
-          {% wysiwyg_editor "id_description" %}
-        </div>
-        <div class="fieldWrapper">
-          <label for="id_logo">{% trans "Logotype" %}:</label>
-          {{ form.logo }}
-        </div>
-        <div class="fieldWrapper">
-          <label for="id_banner">{% trans "Banner" %}:</label>
-          {{ form.banner }}
-        </div>
-        <div class="fieldWrapper">
-          <label for="id_authorized_groups">{% trans "Authorized Groups" %}:</label>
-          {{ form.authorized_groups }}
-        </div>
-
-        <hr />
-        <h3>{% trans "Modules" %}</h3>
-
-        <div class="fieldWrapper">
-          <p>{{ form.mod_debate }} {% trans "Debate" %}</p>
-          <p>{{ form.mod_proposals }} {% trans "Proposals" %}</p>
-          <p>{{ form.mod_news }} {% trans "News" %}</p>
-          <p>{{ form.mod_cal }} {% trans "Calendar" %}</p>
-          <p>{{ form.mod_docs }} {% trans "Documentation" %}</p>
-        </div>
-
-          {{ form.author.as_hidden }}
-
-        <hr />
-
-        <h3>{% trans "Entities participating" %}</h3>
-
-        {% comment %}
-            Entity forms
-        {% endcomment %}
-
-        {{ entityformset.management_form }}
-
-        {% for entity in entityformset %}
-          {{ entity.id }}
-          <div class="fieldWrapper">
-            {{ entity.errors }}
-            {% trans "Name" %}: {{ entity.name }}<br />
-            {% trans "Website" %}: {{ entity.website }}<br />
-            {% trans "Logotype" %}: {{ entity.logo }}
-            {{ entity.space.as_hidden }}
-        </div>
-        {% endfor %}
+        <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
+            
+            {{ form.non_field_errors }}
         
-        <hr />
-        <p class="buttons">
-          <input type="submit" value="{% trans 'Create' %}" />
-          <a href="../../" class="pagebutton">{% trans "Cancel" %}</a>
-        </p>
+            <div class="clearfix"> 
+                {{ form.name.errors }}
+                <label for="prependedInput">{{ form.name.label }}</label> 
+                <div class="input"> 
+                    {{ form.name }}
+                    <span class="help-inline">{{ form.name.help_text }}</span>
+                </div> 
+            </div>   
 
-      </form>
-    </div>
+            <div class="clearfix"> 
+                {{ form.url.errors }}
+                <label for="prependedInput">{{ form.url.label }}</label> 
+                <div class="input"> 
+                    {{ form.url }}
+                    <span class="help-inline">{{ form.url.help_text }}</span>
+                </div> 
+            </div>   
 
-  {% endblock %}
+            <div class="clearfix"> 
+                {{ form.description.errors }}
+                <label for="prependedInput">{{ form.description.label }}</label> 
+                <div class="input"> 
+                    {{ form.description }}
+                    {% wysiwyg_editor "id_description" %}
+                    <span class="help-inline">{{ form.description.help_text }}</span>
+                </div> 
+            </div>   
+
+            <div class="clearfix"> 
+                {{ form.logo.errors }}
+                <label for="prependedInput">{{ form.logo.label }}</label> 
+                <div class="input"> 
+                    {{ form.logo }}
+                    <span class="help-inline">{{ form.logo.help_text }}</span>
+                </div> 
+            </div>   
+
+            <div class="clearfix"> 
+                {{ form.banner.errors }}
+                <label for="prependedInput">{{ form.banner.label }}</label> 
+                <div class="input"> 
+                    {{ form.banner }}
+                    <span class="help-inline">{{ form.banner.help_text }}</span>
+                </div> 
+            </div>   
+
+            <div class="clearfix"> 
+                {{ form.authorized_groups.errors }}
+                <label for="prependedInput">{{ form.authorized_groups.label }}</label> 
+                <div class="input"> 
+                    {{ form.authorized_groups }}
+                    <span class="help-inline">{{ form.authorized_groups.help_text }}</span>
+                </div> 
+            </div>
+
+            <hr />
+            <h3>{% trans "Modules" %}</h3>
+
+            <div class="fieldWrapper">
+                <p>{{ form.mod_debate }} {% trans "Debate" %}</p>
+                <p>{{ form.mod_proposals }} {% trans "Proposals" %}</p>
+                <p>{{ form.mod_news }} {% trans "News" %}</p>
+                <p>{{ form.mod_cal }} {% trans "Calendar" %}</p>
+                <p>{{ form.mod_docs }} {% trans "Documentation" %}</p>
+            </div>
+
+            {{ form.author.as_hidden }}
+
+            <hr />
+
+            <h3>{% trans "Entities participating" %}</h3><br /><br />
+
+            {% comment %}
+                Entity forms
+            {% endcomment %}
+
+            {{ entityformset.management_form }}
+
+            {% for entity in entityformset %}
+                {{ entity.id }}
+                <div class="clearfix"> 
+                    {{ entity.errors }}
+                    <label for="prependedInput">{{ entity.name.label }}</label> 
+                    <div class="input"> 
+                        {{ entity.name }}
+                        <span class="help-inline">{{ entity.name.help_text }}</span>
+                    </div> 
+                </div>
+                
+                <div class="clearfix">
+                    {{ entity.errors }}
+                    <label for="prependedInput">{{ entity.website.label }}</label> 
+                    <div class="input"> 
+                        {{ entity.website }}
+                        <span class="help-inline">{{ entity.website.help_text }}</span>
+                    </div> 
+                </div>
+
+                <div class="clearfix"> 
+                    {{ entity.errors }}
+                    <label for="prependedInput">{{ entity.logo.label }}</label> 
+                    <div class="input"> 
+                        {{ entity.logo }}
+                        <span class="help-inline">{{ entity.logo.help_text }}</span>
+                    </div> 
+                </div>
+                
+                <div class="clearfix">
+                    <label for="prependedInput"><hr /></label>
+                </div>           
+            
+            {% endfor %}
+       
+            <hr />
+            <a href="{{ get_place.get_absolute_url }}" class="btn danger small">&laquo; {% trans "Cancel" %}</a>
+            <input class="btn small primary " type="submit" value="{% trans 'Create' %}" />
+
+        </form>
+        </div>
+
+    {% endblock %}
 
 
-  {% block rightcol %}
-    <div class="grid_5">
-      <div id="widget">
-       <h2>{% trans "How to add new spaces" %}</h2><br/>
-        <ul class="instructions">
-          <li><strong>{% trans "Space name" %}</strong>: {% trans "The name of the space. Have in mind that this name will be used as the URL of your space. We recommend to use all lowercase. (100 chars)" %}</li>
-          <li><strong>{% trans "Description" %}</strong>: {% trans "An optional description for your space. It won't be showed to the users, but to the admins." %}</li>
-          <li><strong>{% trans "Logotype" %}</strong>: {% trans "An image of 75px height and 100px width." %}</li>
-          <li><strong>{% trans "Banner" %}</strong>: {% trans "Another image. 75px height." %}</li>
-          <li><strong>{% trans "Authorized groups" %}</strong>: {% trans "This will set up what users can access to your space." %}</li>
-          <li><strong>{% trans "Modules" %}</strong>: {% trans "Select the modules you will use in your space. This can be edited afterwards." %}</li>
-        </ul>
-      </div>
-    </div>
-  {% endblock %}
+    {% block rightcol %}
+        <div class="grid_5">
+            <div id="widget">
+                <h2>{% trans "How to add new spaces" %}</h2><br/>
+                <ul class="instructions">
+                    <li><strong>{% trans "Space name" %}</strong>: {% trans "The name of the space. Have in mind that this name will be used as the URL of your space. We recommend to use all lowercase. (100 chars)" %}</li>
+                    <li><strong>{% trans "Description" %}</strong>: {% trans "An optional description for your space. It won't be showed to the users, but to the admins." %}</li>
+                    <li><strong>{% trans "Logotype" %}</strong>: {% trans "An image of 75px height and 100px width." %}</li>
+                    <li><strong>{% trans "Banner" %}</strong>: {% trans "Another image. 75px height." %}</li>
+                    <li><strong>{% trans "Authorized groups" %}</strong>: {% trans "This will set up what users can access to your space." %}</li>
+                    <li><strong>{% trans "Modules" %}</strong>: {% trans "Select the modules you will use in your space. This can be edited afterwards." %}</li>
+                </ul>
+            </div>
+        </div>
+    {% endblock %}
 
 {% endblock %}
 
