--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/login.html
@@ -51,8 +51,8 @@
 	      </fieldset><br />
 	
 	    <p><input type="submit" value="{% trans 'Login' %}" />
-	      <a href="{% url password_reset %}">{% trans "Lost your password?" %}</a> /
-	      <a href="{% url signup %}">{% trans "Sign up!" %}</a>
+	      <a href="{% url 'password_reset' %}">{% trans "Lost your password?" %}</a> /
+	      <a href="{% url 'signup' %}">{% trans "Sign up!" %}</a>
 	    </p>
 	  </form>
   </div>
