--- a/src/e_cidadania/apps/userprofile/templates/userprofile/account/logout.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/account/logout.html
@@ -7,6 +7,6 @@
 {% block content %}
 <div class="grid_16">
 	<h3>{% trans "Logged out" %}</h3>
-	<p class="large">{% trans "You've been logged out" %}. (<a href="{% url profile_overview %}">{% trans 'Log in again' %}</a>)</p>
+	<p class="large">{% trans "You've been logged out" %}. (<a href="{% url 'profile_overview' %}">{% trans 'Log in again' %}</a>)</p>
 </div>
 {% endblock %}
