--- a/src/e_cidadania/apps/userprofile/templates/userprofile/profile/location_done.html
+++ b/src/e_cidadania/apps/userprofile/templates/userprofile/profile/location_done.html
@@ -6,6 +6,6 @@
 {% block content %}
   <div class="grid_16">
 	  <h3>{% trans "Your profile information has been updated successfully" %}.</h3>
-	  <p><a href="/accounts/">{% trans "Go back to your profile" %}</p>
+	  <p><a href="{% url 'profile-overview' %}">{% trans "Go back to your profile" %}</p>
 	</div>
 {% endblock %}
